--- a/requirements - copia.txt
+++ b/requirements - copia.txt
@@ -64,7 +64,7 @@ six==1.12.0
 terminado==0.8.1
 testpath==0.4.2
 toolz==0.9.0
-torch
+torch==1.0.1.post2
 torchvision==0.2.2
 tornado==5.1.1
 tqdm==4.19.9
